# py-package-updater

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
package_updater/: __init__.py  __main__.py  environment_manager.py  file_updater.py  package_manager.py  report_generator.py  test_discovery.py  update_tester.py
py_package_updater/: __init__.py  __main__.py  test_discovery.py  update_tester.py
tests/: test_discovery_test.py  test_environment_manager.py  test_file_updater.py  test_main.py  test_package_manager.py  test_report_generator.py  test_update_tester.py
